Fix right aligned button margin

--- a/administrator/templates/atum/css/template.css
+++ b/administrator/templates/atum/css/template.css
@@ -8261,7 +8261,7 @@ legend {
       border-color: #419641; }
       .subhead .btn-toolbar .btn-success.dropdown-toggle::after {
         color: #fff; }
-    .subhead .btn-toolbar button:first-of-type {
+    .subhead .btn-toolbar button:first-of-type:not(.float-sm-right) {
       margin-left: 0; }
   .subhead.subhead-fixed {
     position: fixed;
